--- a/assets/css/balderdash.css
+++ b/assets/css/balderdash.css
@@ -1,6 +1,7 @@
 body, html {
     margin:0px;
     height: 100%;
+    min-width: 450px;
 }
 
 #wrapper {
@@ -201,3 +202,30 @@ button#add-player {
     float: right;
 }
 
+@media screen and (max-width: 950px) {
+    #game-wrapper {
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        align-items: center;
+    }
+
+    div#words, div#rules {
+        -webkit-flex: 0 0 auto;
+            -ms-flex: 0 0 auto;
+                flex: 0 0 auto;
+        border-right: none;
+        border-bottom: solid 1px grey;
+        min-height: 400px;
+        padding-bottom: 50px;
+        width: 100%;
+    }
+
+    div#players {
+        -webkit-flex: 0 0 auto;
+            -ms-flex: 0 0 auto;
+                flex: 0 0 auto;
+        padding: 50px 0;
+        width: 450px;
+    }
+}
