--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -34,7 +34,7 @@
 
 <nav class="footer">
     <div class="container">
-        <p>Please forgive the sparseness of the current state of this blog; I've just begun working on it.
+        <p>Sam's the name...
         </p>
     </div>
 </nav>
